<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.type_lunar.pro1.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_string"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:id="@+id/b_ti"
        android:layout_marginTop="20dp" />
    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@mipmap/sysu"
        android:id="@+id/s_su"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_ti"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/t_xh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:text="@string/s_id"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/s_su"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/t_xm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/s_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/t_xh" />
    <EditText
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/w_sid"
    android:inputType="number"
        android:textSize="18sp"
    app:layout_constraintTop_toBottomOf="@+id/s_su"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toRightOf="@+id/t_xh"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:id="@+id/editText2" />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/w_sid2"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/t_xh"
        android:id="@+id/editText"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toRightOf="@+id/t_xm"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="1.0" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_dl"
        android:id="@+id/bt1"
        android:background="@drawable/bs"
        android:textColor="@color/colorw"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/b1"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_zc"
        android:background="@drawable/bs"
        android:textColor="@color/colorw"
        android:id="@+id/button"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/b1"
        android:layout_marginRight="5dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="5dp" />

    <RadioGroup
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:textSize="18sp"
        android:checkedButton="@+id/b2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_xm">

        <RadioButton
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_b2s"
            android:textSize="18sp"
            android:id="@+id/c1"/>

        <RadioButton
            android:id="@+id/b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/c1"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_b3s"
            android:textSize="18sp"/>
    </RadioGroup>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />
</android.support.constraint.ConstraintLayout>
